Odoo MicroK8s Cloud Deploy/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      - name: odoo
        image: odoo:17
        ports:
        - containerPort: 8069
        volumeMounts:
        - mountPath: /var/lib/odoo
          name: odoo-storage
      volumes:
      - name: odoo-storage
        persistentVolumeClaim:
          claimName: odoo-pvc
