Odoo MicroK8s Cloud Deploy/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoo-namespace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8069
  selector:
    app: odoo
